dwarf/testplease/amaru/v10.11.20260925/crates/amaru-kernel/src/cardano/snapshots/amaru_kernel__cardano__era_history__tests__mainnet_era_history.snap
---
source: crates/amaru-kernel/src/cardano/era_history.rs
expression: "serde_json::to_string_pretty(era_history).expect(\"failed to serialize era history to pretty JSON\")"
---
{
  "stability_window": 129600,
  "eras": [
    {
      "start": {
        "time": 0,
        "slot": 0,
        "epoch": 0
      },
      "end": {
        "time": 89856000,
        "slot": 4492800,
        "epoch": 208
      },
      "params": {
        "epoch_size_slots": 21600,
        "slot_length": 20000,
        "era_name": "Byron"
      }
    },
    {
      "start": {
        "time": 89856000,
        "slot": 4492800,
        "epoch": 208
      },
      "end": {
        "time": 101952000,
        "slot": 16588800,
        "epoch": 236
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Shelley"
      }
    },
    {
      "start": {
        "time": 101952000,
        "slot": 16588800,
        "epoch": 236
      },
      "end": {
        "time": 108432000,
        "slot": 23068800,
        "epoch": 251
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Allegra"
      }
    },
    {
      "start": {
        "time": 108432000,
        "slot": 23068800,
        "epoch": 251
      },
      "end": {
        "time": 125280000,
        "slot": 39916800,
        "epoch": 290
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Mary"
      }
    },
    {
      "start": {
        "time": 125280000,
        "slot": 39916800,
        "epoch": 290
      },
      "end": {
        "time": 157680000,
        "slot": 72316800,
        "epoch": 365
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Alonzo"
      }
    },
    {
      "start": {
        "time": 157680000,
        "slot": 72316800,
        "epoch": 365
      },
      "end": {
        "time": 219024000,
        "slot": 133660800,
        "epoch": 507
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Babbage"
      }
    },
    {
      "start": {
        "time": 219024000,
        "slot": 133660800,
        "epoch": 507
      },
      "end": null,
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Conway"
      }
    }
  ]
}
