dwarf/testplease/amaru/v10.11.20260925/crates/amaru-kernel/src/cardano/snapshots/amaru_kernel__cardano__era_history__tests__preprod_era_history.snap
---
source: crates/amaru-kernel/src/cardano/era_history.rs
expression: "serde_json::to_string_pretty(era_history).expect(\"failed to serialize era history to pretty JSON\")"
---
{
  "stability_window": 129600,
  "eras": [
    {
      "start": {
        "time": 0,
        "slot": 0,
        "epoch": 0
      },
      "end": {
        "time": 1728000,
        "slot": 86400,
        "epoch": 4
      },
      "params": {
        "epoch_size_slots": 21600,
        "slot_length": 20000,
        "era_name": "Byron"
      }
    },
    {
      "start": {
        "time": 1728000,
        "slot": 86400,
        "epoch": 4
      },
      "end": {
        "time": 2160000,
        "slot": 518400,
        "epoch": 5
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Shelley"
      }
    },
    {
      "start": {
        "time": 2160000,
        "slot": 518400,
        "epoch": 5
      },
      "end": {
        "time": 2592000,
        "slot": 950400,
        "epoch": 6
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Allegra"
      }
    },
    {
      "start": {
        "time": 2592000,
        "slot": 950400,
        "epoch": 6
      },
      "end": {
        "time": 3024000,
        "slot": 1382400,
        "epoch": 7
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Mary"
      }
    },
    {
      "start": {
        "time": 3024000,
        "slot": 1382400,
        "epoch": 7
      },
      "end": {
        "time": 5184000,
        "slot": 3542400,
        "epoch": 12
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Alonzo"
      }
    },
    {
      "start": {
        "time": 5184000,
        "slot": 3542400,
        "epoch": 12
      },
      "end": {
        "time": 70416000,
        "slot": 68774400,
        "epoch": 163
      },
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Babbage"
      }
    },
    {
      "start": {
        "time": 70416000,
        "slot": 68774400,
        "epoch": 163
      },
      "end": null,
      "params": {
        "epoch_size_slots": 432000,
        "slot_length": 1000,
        "era_name": "Conway"
      }
    }
  ]
}
